kuber/hw8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multibox
  template:
    metadata:
      labels:
        app: multibox
    spec:
      containers:
        - name: multitool
          image: wbitt/network-multitool:latest
          ports:
            - containerPort: 8080   
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
          - name: multimap
            mountPath: /usr/share/nginx/html
      volumes: 
        - name: multimap
          configMap:
            name: multiport
