kuber/hw8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: multibox
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
